auth page created

--- a/client/src/config.scss
+++ b/client/src/config.scss
@@ -6,9 +6,10 @@
     --Inter: 'Inter', sans-serif;
     --Raleway: 'Raleway', sans-serif;
     --RedHatDisplay: 'Red Hat Display', sans-serif;
+    --InstrumentSans: 'Instrument Sans', sans-serif;
 
     //colors
-    --background-color: #828589;
+    --background-color: #EFF1F2;
     --primary-color: #008dda;
     --secondary-color: #113f67;
     --complementary-color: #828589;
